--- a/themes/team22theme/sass/theme/_theme.scss
+++ b/themes/team22theme/sass/theme/_theme.scss
@@ -108,4 +108,8 @@ img.img-fluid {
   padding-top: 70px;
   color: black;
 }
+
+.wp-block-cover.has-background-dim {
+  margin-bottom: 0;
+}
 //---------------------------------------End hard-coded styles-----------------------------------------
